--- a/emailuis/nmailuiwidgets/nmailuiwidgets.qrc
+++ b/emailuis/nmailuiwidgets/nmailuiwidgets.qrc
@@ -3,7 +3,8 @@
         <file alias="nmattachmentlistwidget.docml" >resources/nmattachmentlistwidget.docml</file>
         <file alias="nmattachmentlistitem.widgetml" >resources/nmattachmentlistitem.widgetml</file>
         <file alias="nmattachmentlistitem.css" >resources/nmattachmentlistitem.css</file>
-        <file alias="nmeditortextedit.css" >resources/nmeditortextedit.css</file>
+        <file alias="nmeditortexteditblack.css" >resources/nmeditortexteditblack.css</file>
+        <file alias="nmeditortexteditblue.css" >resources/nmeditortexteditblue.css</file>
         <file alias="nmeditortextedit.widgetml" >resources/nmeditortextedit.widgetml</file>
     </qresource>
 </RCC>
