--- a/emailuis/nmhswidget/nmhswidget.qrc
+++ b/emailuis/nmhswidget/nmhswidget.qrc
@@ -1,6 +1,6 @@
 <RCC>
     <qresource prefix="/docml">
-        <file alias="nmhswidgetmail.docml">conf/nmhswidgetmail.docml</file>
-        <file alias="nmhswidget.docml">conf/nmhswidget.docml</file>
+        <file alias="nmhswidgetmail.docml">conf/nmhswidgetmail.docml.bin</file>
+        <file alias="nmhswidget.docml">conf/nmhswidget.docml.bin</file>
     </qresource>
 </RCC>
