--- a/emailuis/nmsettingui/nmsettingui.qrc
+++ b/emailuis/nmsettingui/nmsettingui.qrc
@@ -1,6 +1,6 @@
 <!DOCTYPE RCC>
 <RCC>
-    <qresource prefix="/docml" >
-        <file alias="nmmailboxsettingview.docml" >conf/nmmailboxsettingview.docml</file>
+    <qresource prefix="/docml">
+        <file alias="nmmailboxsettingview.docml">conf/nmmailboxsettingview.docml.bin</file>
     </qresource>
 </RCC>
