--- a/emailuis/nmailui/conf/nmmessagelistviewitem.css
+++ b/emailuis/nmailui/conf/nmmessagelistviewitem.css
@@ -7,20 +7,20 @@ NmMessageListViewItem:landscape {
 }
 
 NmMessageListViewItem::sender {
-  fixed-height: var(hb-param-text-height-primary);
+  text-height: var(hb-param-text-height-primary);
   text-align: left;
   text-wrap-mode: no-wrap;
 }
 
 NmMessageListViewItem::time {
-  fixed-height: var(hb-param-text-height-secondary);
+  text-height: var(hb-param-text-height-secondary);
   fixed-width: 12un;
   text-align: right;
   text-wrap-mode: no-wrap;
 }
 
 NmMessageListViewItem::subject {
-  fixed-height: var(hb-param-text-height-secondary);
+  text-height: var(hb-param-text-height-secondary);
   text-align: left;
   text-wrap-mode: no-wrap;
 }
